  the `Launcher` of `selectorProcessed` events.
* Reintroduce support for JVM shutdown hooks when using the `-cp`/`--classpath` option of
  the `ConsoleLauncher`. Prior to this release, the created class loader was closed prior
  to JVM shutdown hooks being invoked, which caused hooks to fail with a
  `ClassNotFoundException` when loading classes during shutdown.

[[release-notes-5.13.0-junit-platform-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.0-junit-platform-new-features-and-improvements]]
==== New Features and Improvements

* Introduce a mechanism for `TestEngine` implementations to report issues encountered
  during test discovery. If an engine reports a `DiscoveryIssue` with a `Severity` equal
  to or higher than a configurable critical severity, its tests will not be executed.
  Instead, the engine will be reported as failed during execution with a failure message
  listing all critical issues. Non-critical issues will be logged but will not prevent the
  engine from executing its tests. The critical severity can be configured via a new
  configuration parameter and, currently, defaults to `ERROR`. Please refer to the
  <<../user-guide/index.adoc#running-tests-discovery-issues, User Guide>> for details.
+
If you're a test engine maintainer, please see the
<<../user-guide/index.adoc#test-engines-discovery-issues, User Guide>> for details on how
to start reporting discovery issues.
* Start reporting discovery issues for problematic `@Suite` classes:
  - Invalid `@Suite` class declarations (for example, when `private`)
  - Invalid `@BeforeSuite`/`@AfterSuite` method declarations (for example, when not
    `static`)
  - Cyclic dependencies between `@Suite` classes
* Introduce resource management mechanism that allows preparing and sharing state across
  executions or test engines via stores that are scoped to a `LauncherSession` or